--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">T-rate</string>
+    <string name="profile">Profile</string>
+    <string name="home">Home</string>
+    <string name="search">Explore</string>
+    <string name="settings">Settings</string>
+    <string name="contact">Contact</string>
+    <string name="faq">FAQ</string>
+    <string name="exit_back">Press back again to exit</string>
 </resources>
