--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,27 @@
 <resources>
+
+    <!-- APP WIDE -->
     <string name="app_name">T-rate</string>
+
+    <!-- DRAWER -->
     <string name="profile">Profile</string>
     <string name="home">Home</string>
     <string name="search">Explore</string>
     <string name="settings">Settings</string>
     <string name="contact">Contact</string>
     <string name="faq">FAQ</string>
+
+    <!-- HOME SCREEN -->
     <string name="exit_back">Press back again to exit</string>
+
+    <!-- SIGN UP & SIGN IN -->
+    <string name="header_sign_up">Create Account</string>
+    <string name="hint_email">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="hint_confirm_password">Confirm Password</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="sign_in">Sign In</string>
+    <string name="Thanks">Thank You For Signing Up</string>
+    <string name="verify">Please verify your email. if you don\'t verify within 2 days your account will be automatically deleted</string>
+    <string name="go_to_profile">you can sign in by going to profile</string>
 </resources>
